--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,25 +4,28 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: '3.8'
+
     - name: Install dependencies
       run: |
         make install
+
     - name: Lint with pylint
       run: |
         make lint
+
     - name: Test with pytest
       run: |
         make test
+
     - name: Format code
       run: |
         make format
-    
